# chain-watch

./: API_CONTRACT.md  DESIGN_NOTES.md  MCP.md  README.md  dev.sh
backend/: pyproject.toml
backend/app/: main.py  mcp_server.py
backend/tests/: test_api.py  test_mcp_server.py
data/: NH_Penalties_Jun2026.csv  us_zip_centroids.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  detail.css  format.ts  index.css  states.ts  types.ts
frontend/src/components/: ChainDetail.tsx  ChainTable.tsx  FacilityDetail.tsx  FacilityMap.tsx  FineTimeline.tsx  NearMe.tsx  Stars.tsx
