[project]
name = "backend"
version = "0.1.0"
description = "Data tool backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pyarrow>=17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
